# flashcardify

./: LICENSE  README.md  dict.csv  main.py  pyproject.toml
app/: get_questions.py  read_data.py  repitition.py
data/: saved_weights.pkl
