[tool.poetry]
name = "flashcardify"
version = "0.1.0"
description = ""
authors = ["cmaspi <chiragmehta1010@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pandas = "^2.2.2"
kivy = "^2.3.0"
buildozer = "^1.5.0"
setuptools = "^70.1.1"
cython = "0.29.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
